2 July 2012: Wouter
	- updated iana ports list.

29 June 2012: Wouter
	- patch for unbound_munin_ script to handle arbitrary thread count by
	  Sven Ulland.

28 June 2012: Wouter
	- detect if openssl has FIPS_mode.
	- code review: return value of cache_store can be ignored for better
	  performance in out of memory conditions.
	- fix edns-buffer-size and msg-buffer-size manpage documentation.
	- updated iana ports list.

25 June 2012: Wouter
	- disable RSAMD5 if in FIPS mode (for openssl and for libnss).

22 June 2012: Wouter
	- implement DS records, NSEC3 and ECDSA for compile with libnss.

21 June 2012: Wouter
	- fix error handling of alloc failure during rrsig verification.
	- nss check for verification failure.
	- nss crypto works for RSA and DSA.

20 June 2012: Wouter
	- work on --with-nss build option (for now, --with-libunbound-only).

19 June 2012: Wouter
	- --with-libunbound-only build option, only builds the library and
	  not the daemon and other tools.

18 June 2012: Wouter
	- code review.

15 June 2012: Wouter
	- implement log-time-ascii on windows.
	- The key-cache bad key ttl is now 60 seconds.
	- updated iana ports list.
	- code review.

11 June 2012: Wouter
	- bug #452: fix crash on assert in mesh_state_attachment.

30 May 2012: Wouter
	- silence warning from swig-generated code (md set but not used in
	  swig initmodule, due to ifdefs in swig-generated code).

27 May 2012: Wouter
	- Fix debian-bugs-658021: Please enable hardened build flags.

25 May 2012: Wouter
	- updated iana ports list.

24 May 2012: Wouter
	- tag for 1.4.17 release.
	- trunk is 1.4.18 in development.

18 May 2012: Wouter
	- Review comments, removed duplicate memset to zero in delegpt.

16 May 2012: Wouter
	- Updated doc/FEATURES with RFCs that are implemented but not listed.
	- Protect if statements in val_anchor for compile without locks.
	- tag for 1.4.17rc1.

15 May 2012: Wouter
	- fix configure ECDSA support in ldns detection for windows compile.