@@ -1,3 +1,6 @@
+3 July 2012: Wouter
+	- FIPS_mode openssl does not use arc4random but RAND_pseudo_bytes.
+
 2 July 2012: Wouter
 	- updated iana ports list.
 
